--- a/indexx.html
+++ b/indexx.html
@@ -13,12 +13,10 @@
         box-sizing: border-box;
       }
 
-      
       body {
         font-family: "Poppins", sans-serif;
         background-color: #e2bfde;
       }
-      
 
       .login-box {
         width: 350px;
@@ -48,7 +46,7 @@
       button {
         width: 100%;
         padding: 10px;
-        background-color: #720856;
+        background-color: #611c4e;
         color: white;
         border: none;
         font-size: 16px;
@@ -116,7 +114,7 @@
           .then((data) => {
             console.log("API response:", data);
 
-            messageBox.style.color = "green";
+            messageBox.style.color = "red";
             messageBox.innerText = "Login request sent successfully!";
           })
           .catch((error) => {
